# Otus_Python

./: README.md  requirements-dev.txt  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  README.md  main.py  pyproject.toml
homework_03/api/: items.py
homework_03/api/users/: crud.py  schemas.py  views.py
homework_04/: config.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  index.html
homework_06/: Dockerfile  docker-compose.yaml  requirements.txt
homework_06/app/: config.py  main.py  prestart.sh
homework_06/app/migrations/versions/: 6a3f7f472581_create_products_table.py  781e5a947eef_add_description_column_to_products_table.py
homework_06/app/models/: product.py
homework_06/app/static/css/: products-base.css  push-button.css
homework_06/app/static/js/: button-count.js  product-details.js
homework_06/app/templates/: base.html  index.html
homework_06/app/templates/products/: add.html  details.html  list.html
homework_06/app/templates/products/macros/: productform.html
homework_06/app/views/: products.py
homework_06/app/views/forms/: products.py
